# Condado

./: Dockerfile  docker-compose.yml  pyproject.toml  settings.env  settings.yml
nginx/: nginx.conf  nginx.conf.example
spa/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
spa/src/components/: HelloWorld.vue
supervisor/: .gitignore
supervisor/api/: app.py  requirements.txt  settings.py  version_router.py
supervisor/api/clouds/: local.py
supervisor/api/models/: __init__.py  tenant.py  tenent.py
supervisor/api/routers/: hello_v1.py  hello_v2.py
supervisor/api/routers/v1/: __init__.py  healthcheck.py  tenant.py  tenent.py
supervisor/api/utils/: docker.py  nginx.py
tenants/default/: app.py  settings.env  settings.py
tenants/test-dockers/: requirements.txt
tenants/test-dockers/bla/blabla/: some_file.yml
tenents/default/: reqirements.txt  settings.env
tests/supervisor/clouds/local/: test_dockers.py
